fix contacts mapping